--- a/src/main/resources/static/styleSheets/style.css
+++ b/src/main/resources/static/styleSheets/style.css
@@ -2,12 +2,13 @@
     background-color: aliceblue;
     border: solid black 3px;
     width: 90vw;
-    height: 80vw;
+    height: max-content;
     padding: 20px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     flex-direction: column;
+
 
 }
 
@@ -54,7 +55,7 @@ nav {
 
 button {
     font-family:Arial, Helvetica, sans-serif;
-    margin: 10px;
+    margin: 20px;
 }
 
 .answer-container{
@@ -80,10 +81,11 @@ input{
 }
 
 #score-display{
-    display: flex;
+    display:contents;
     flex-direction: column;
     padding: 10px;
     height:80%;
+    
 
 }
 #score-display p {
@@ -94,7 +96,7 @@ input{
 #correct-container{
     display: flex;
     flex-direction: column;
-    height: 400px;
+    height:max-content;
 
 }
 
@@ -105,7 +107,7 @@ input{
     padding: 10px;
 }
 
-#play-again-button, #submit-button{
+#play-again-button, .submit-button{
     width: 30%;
     margin-left: auto;
     margin-right: auto;
@@ -119,15 +121,25 @@ input{
 
 #play-again-button:hover{
     background-color: #5E91BF;
-    box-shadow: 10px 0px 10px #5E91BF;
     transition: 2ms;
     color: white;
 }
 
-#submit-button:active{
+.submit-button:hover{
     background-color: #5E91BF;
     transition: 2ms;
     color: white;
+}
+.disabled-button{
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 1em;
+    padding: 10px;
+    background-color: white;
+    border: #57819C 2px solid;
+    color: #5E91BF;
+    cursor:not-allowed;
 }
 
 #error-message{
@@ -136,7 +148,10 @@ input{
 }
 
 #score{
-    margin-top: 5px;;
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: large;
 }
 
 
