--- a/src/main/resources/static/styleSheets/style.css
+++ b/src/main/resources/static/styleSheets/style.css
@@ -73,7 +73,7 @@ button {
     background-color: white;
     box-shadow: 10px 0px 10px #5E91BF;
     transition: 2ms;
-    color: #5E91BF;;
+    color: #5E91BF;
 }
 
 input{
