--- a/src/main/resources/static/styleSheets/quizApp.css
+++ b/src/main/resources/static/styleSheets/quizApp.css
@@ -49,8 +49,8 @@ input {
 }
 
 nav {
-    padding-left: 37%;
-    padding-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 button {
